--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script
       type="text/babel"
       data-plugins="transform-class-properties"
-      src="./js/app.js"
+      src="./js/app-9.js"
     ></script>
   </body>
 </html>
